k8s-manifests/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-app
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
      - name: guestbook
        image: ahmedlebshten/guestbook:v14
        ports:
        - containerPort: 3000
        # HPA
        resources:
          requests:
            cpu: "100m"     
            memory: "128Mi"
          limits:
            cpu: "200m"      
            memory: "256Mi"
        # -------------------------------------------
---
apiVersion: v1
kind: Service
metadata:
  name: guestbook-service
spec:
  type: NodePort 
  selector:
    app: guestbook
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30001
